prodMetadata/src/objects/Story__c.object
<CustomObject>
    <fields>
        <fullName>Agreed_to_Terms_of_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Contact has acknowledged and accepted terms of story use.</inlineHelpText>
        <label>Agreed to Terms of Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Stories</relationshipLabel>
        <relationshipName>Stories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Shared__c</fullName>
        <description>Date that a story is shared</description>
        <inlineHelpText>Date that a story is shared</inlineHelpText>
        <label>Date Shared</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Story__c</fullName>
        <inlineHelpText>Story as it has been approved (possibly after editing) by IAVA Communications staff.</inlineHelpText>
        <label>Final Story</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Link_to_Story__c</fullName>
        <inlineHelpText>If the story is posted online elsewhere, attach the link here</inlineHelpText>
        <label>Link to Story</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Shared_Story__c</fullName>
        <description>Checked if story was shared</description>
        <formula>NOT(ISBLANK(Date_Shared__c))</formula>
        <inlineHelpText>Checked if story was shared</inlineHelpText>
        <label>Shared Story</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Story_Mini_Summary__c</fullName>
        <inlineHelpText>Limited to 255 characters</inlineHelpText>
        <label>Story Mini-Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Submitted_Story__c</fullName>
        <label>Submitted Story</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Success_Story__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Success Story?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Topics__c</fullName>
        <label>Topics</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Alternative Therapy</fullName>
                </value>
                <value>
                    <fullName>Clay Hunt SAV Act</fullName>
                </value>
                <value>
                    <fullName>COV</fullName>
                </value>
                <value>
                    <fullName>Discrimination</fullName>
                </value>
                <value>
                    <fullName>DOD</fullName>
                </value>
                <value>
                    <fullName>Employment</fullName>
                </value>
                <value>
                    <fullName>Gala</fullName>
                </value>
                <value>
                    <fullName>GI Bill</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Homelessness</fullName>
                </value>
                <value>
                    <fullName>Iraq</fullName>
                </value>
                <value>
                    <fullName>Iraqi Interpreters</fullName>
                </value>
                <value>
                    <fullName>Local Events</fullName>
                </value>
                <value>
                    <fullName>Love</fullName>
                </value>
                <value>
                    <fullName>Member Survey</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>Military COLA</fullName>
                </value>
                <value>
                    <fullName>Military Recruitment</fullName>
                </value>
                <value>
                    <fullName>Military Sexual Trauma</fullName>
                </value>
                <value>
                    <fullName>NGIB</fullName>
                </value>
                <value>
                    <fullName>NYC Veterans</fullName>
                </value>
                <value>
                    <fullName>Online Campaigns</fullName>
                </value>
                <value>
                    <fullName>Op-Ed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Overextended Military</fullName>
                </value>
                <value>
                    <fullName>Partnerships</fullName>
                </value>
                <value>
                    <fullName>Politics</fullName>
                </value>
                <value>
                    <fullName>PTSD</fullName>
                </value>
                <value>
                    <fullName>Rally</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Written_by__c</fullName>
        <label>Written by</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>IAVA Staff</fullName>
                </value>
                <value>
                    <fullName>3rd Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Written_by_other_Name__c</fullName>
        <inlineHelpText>If written by someone other than the contact, name of author</inlineHelpText>
        <label>Written by (other) Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Story</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Story Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>